--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_my_list">MyList</string>
     <string name="title_activity_show_my_content">ShowMyContent</string>
+    <string name="title_activity_grid_view">GridViewActivity</string>
+    <string name="title_activity_spinner_example">SpinnerExample</string>
+    <string-array name="favfood">
+        <item>Chinese</item>
+        <item>Continental</item>
+        <item>Maxican</item>
+        <item>Italian</item>
+    </string-array>
+    <string name="title_activity_login">LoginAct</string>
 </resources>
